인기 판매 refactoring